src/css/App.css
.underline {
  text-decoration: underline;
}

* {
  font-size: 16px;
}

body {
  margin-left: 10px;
  margin-top: 50px;
  width: 100%;
  display: flex;
}

div#root {
  margin: auto;
}

div.App {
  width: 1000px;
}

